fixing the major layout issues on tab-portrait

--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -91,7 +91,7 @@ body {
     animation: moveLeft 1000ms ease-in-out; }
     @media (max-width: 37.5em) {
       .primary-heading--main {
-        font-size: 5rem;
+        font-size: 6rem;
         letter-spacing: 1.1rem; } }
   .primary-heading--sub {
     font-size: 2rem;
@@ -115,9 +115,13 @@ body {
   letter-spacing: 0.2rem;
   display: inline-block;
   transition: all 0.2s; }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem;
+      letter-spacing: 0.1rem; } }
   @media (max-width: 37.5em) {
     .heading-secondary {
-      font-size: 2rem;
+      font-size: 2.5rem;
       letter-spacing: 0.1rem; } }
   .heading-secondary:hover {
     transform: scale(1.1) skewX(1deg) skewY(1deg);
@@ -136,15 +140,27 @@ body {
 
 .u-mb-big {
   margin-bottom: 8rem; }
+  @media (max-width: 56.25em) {
+    .u-mb-big {
+      margin-bottom: 3.5rem; } }
 
 .u-mb-small {
   margin-bottom: 1.5rem; }
+  @media (max-width: 56.25em) {
+    .u-mb-small {
+      margin-bottom: 0rem; } }
 
 .u-mb-medium {
   margin-bottom: 4rem; }
+  @media (max-width: 56.25em) {
+    .u-mb-medium {
+      margin-bottom: 3rem; } }
 
 .u-mt-big {
   margin-top: 8rem; }
+  @media (max-width: 56.25em) {
+    .u-mt-big {
+      margin-bottom: 5rem; } }
 
 .bg-video {
   position: absolute;
@@ -334,16 +350,33 @@ body {
     position: absolute;
     transition: all 0.2s;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.5); }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        max-width: 33.33%; } }
     .composition__photo--p1 {
       top: 4rem;
       left: 5rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          left: 5rem;
+          top: 0rem; } }
     .composition__photo--p2 {
       top: -2rem;
       left: 15rem;
       z-index: 10; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: 4rem;
+          transform: scale(1.3);
+          left: 50%;
+          transform: translate(-50%, -50%); } }
     .composition__photo--p3 {
       top: 8rem;
       right: 0rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          right: 5rem;
+          top: 0rem; } }
     .composition__photo:hover {
       outline-offset: 0.2rem;
       outline: 1rem solid rgba(0, 0, 0, 0.5);
@@ -555,10 +588,10 @@ body {
   color: #eee; }
   @media (max-width: 56.25em) {
     .footer {
-      padding: 5rem 0; } }
+      padding: 5rem 0 0rem 0; } }
   @media (max-width: 37.5em) {
     .footer {
-      padding: 4rem 0; } }
+      padding: 4rem 0 0 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 6rem; }
@@ -644,6 +677,10 @@ body {
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 4rem) / 4) + 2 * 4rem); }
 
+@media (max-width: 56.25em) {
+  .remove-mb {
+    margin-bottom: -9.5rem !important; } }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(85, 197, 122, 0.8), rgba(126, 213, 111, 0.8)), url(../img/hero.jpg);
@@ -693,6 +730,10 @@ body {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   cursor: pointer;
   text-align: center; }
+  @media (max-width: 56.25em) {
+    .navigation__button {
+      top: 3rem;
+      right: 4rem; } }
 
 .navigation__background {
   width: 5rem;
@@ -704,6 +745,10 @@ body {
   right: 4.5rem;
   z-index: 1000;
   transition: all 0.3s ease-in; }
+  @media (max-width: 56.25em) {
+    .navigation__background {
+      top: 3.5rem;
+      right: 4rem; } }
 
 .navigation__nav {
   height: 100vh;
@@ -793,6 +838,10 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -25vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 20rem 0;
+      margin-top: -20vh; } }
 
 .section-features {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
@@ -801,22 +850,41 @@ body {
   padding: 20rem 0;
   transform: skewY(-7deg);
   margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 4rem 0;
+      margin-top: -8rem;
+      transform: skewY(-4deg); } }
   .section-features > * {
     transform: skewY(7deg); }
+    @media (max-width: 56.25em) {
+      .section-features > * {
+        transform: skewY(4deg); } }
 
 .section-tours {
   padding: 25rem 0 10rem 0;
   margin-top: -10rem;
   background-color: #f7f7f7; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 16rem 0 1rem 0;
+      margin-top: -9vh; } }
 
 .section-stories {
   margin-top: -10rem;
   padding: 20rem 0 10rem 0;
   position: relative; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 5rem 0 5rem 0;
+      margin-top: 0vh; } }
 
 .section-booking {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)); }
+  @media (max-width: 56.25em) {
+    .section-booking {
+      padding: 5rem 0; } }
   .section-booking .book {
     background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
     background-size: cover;
