--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -19,7 +19,7 @@ body {
         letter-spacing: 1.7rem;
         animation: moveLeft 1000ms ease-in-out;
         @include respond(phone) {
-            font-size: 5rem;
+            font-size: 6rem;
             letter-spacing: 1.1rem;
         }
     }
@@ -50,8 +50,12 @@ body {
     // notice the display
     display: inline-block;
     transition: all 0.2s;
+    @include respond(tab-port) {
+        font-size: 3rem;
+        letter-spacing: 0.1rem;
+    }
     @include respond(phone) {
-        font-size: 2rem;
+        font-size: 2.5rem;
         letter-spacing: 0.1rem;
     }
     &:hover {
