--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -3,14 +3,26 @@
 }
 .u-mb-big {
     margin-bottom: 8rem;
+    @include respond(tab-port) {
+        margin-bottom: 3.5rem;
+    }
 }
 .u-mb-small {
     margin-bottom: 1.5rem;
+    @include respond(tab-port) {
+        margin-bottom: 0rem;
+    }
 }
 .u-mb-medium {
     margin-bottom: 4rem;
+    @include respond(tab-port) {
+        margin-bottom: 3rem;
+    }
 }
 
 .u-mt-big {
     margin-top: 8rem;
+    @include respond(tab-port) {
+        margin-bottom: 5rem;
+    }
 }
