--- a/Natours/sass/components/_composition.scss
+++ b/Natours/sass/components/_composition.scss
@@ -5,18 +5,35 @@
         position: absolute;
         transition: all 0.2s;
         box-shadow: 0 2rem 4rem rgba($color: #000000, $alpha: 0.5);
+        @include respond(tab-port) {
+            max-width: 33.33%;
+        }
         &--p1 {
             top: 4rem;
             left: 5rem;
+            @include respond(tab-port) {
+                left: 5rem;
+                top: 0rem;
+            }
         }
         &--p2 {
             top: -2rem;
             left: 15rem;
             z-index: 10;
+            @include respond(tab-port) {
+                top: 4rem;
+                transform: scale(1.3);
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
         }
         &--p3 {
             top: 8rem;
             right: 0rem;
+            @include respond(tab-port) {
+                right: 5rem;
+                top: 0rem;
+            }
         }
         &:hover {
             outline-offset: 0.2rem;
