--- a/Natours/sass/layouts/_footer.scss
+++ b/Natours/sass/layouts/_footer.scss
@@ -2,10 +2,10 @@
     background-color: $color-grey-dark-3;
     padding: 8rem 0;
     @include respond(tab-port) {
-        padding: 5rem 0;
+        padding: 5rem 0 0rem 0;
     }
     @include respond(phone) {
-        padding: 4rem 0;
+        padding: 4rem 0 0 0;
     }
     font-size: 1.4rem;
     color: $color-grey-light-1;
