--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -2,6 +2,10 @@
     background-color: $grey-light-1;
     padding: 25rem 0;
     margin-top: -25vh;
+    @include respond(tab-port) {
+        padding: 20rem 0;
+        margin-top: -20vh;
+    }
 }
 .section-features {
     background-image: linear-gradient(to right bottom, rgba($primary-light-green, 0.8), rgba($primary-dark-green, 0.8)),
@@ -11,9 +15,17 @@
     padding: 20rem 0;
     transform: skewY(-7deg);
     margin-top: -10rem;
+    @include respond(tab-port) {
+        padding: 4rem 0;
+        margin-top: -8rem;
+        transform: skewY(-4deg);
+    }
 
     & > * {
         transform: skewY(7deg);
+        @include respond(tab-port) {
+            transform: skewY(4deg);
+        }
     }
 }
 
@@ -21,17 +33,27 @@
     padding: 25rem 0 10rem 0;
     margin-top: -10rem;
     background-color: $grey-light-1;
+    @include respond(tab-port) {
+        padding: 16rem 0 1rem 0;
+        margin-top: -9vh;
+    }
 }
 
 .section-stories {
     margin-top: -10rem;
     padding: 20rem 0 10rem 0;
-    // for the video positioning.
+    @include respond(tab-port) {
+        padding: 5rem 0 5rem 0;
+        margin-top: 0vh;
+    } // for the video positioning.
     position: relative;
 }
 
 .section-booking {
     padding: 15rem 0;
+    @include respond(tab-port) {
+        padding: 5rem 0;
+    }
     background-image: linear-gradient(to right bottom, rgba($primary-light-green, 0.8), rgba($primary-dark-green, 0.8));
     .book {
         background-image: linear-gradient(105deg, rgba(white, 0.9) 0%, rgba(white, 0.9) 50%, transparent 50%),
